# tsh_project

./: README.md
arraydb/: .gitignore
arraydb/data/1-2/: pres-1024.txt  pres-128.txt  pres-256.txt  pres-512.txt
arraydb/data/12-31/: etop-1024.txt  etop-128.txt  etop-256.txt  etop-512.txt  pres-1024.txt  pres-128.txt  pres-256.txt  pres-512.txt
arraydb/data/bitmap/: etop-bitmap.txt  pres-bitmap.txt
arraydb/data/etop/: etop-1024.txt  etop-128.txt  etop-256.txt  etop-512.txt  etop-bitmap.txt  etop_bitmap_index_1024.txt  etop_bitmap_index_128.txt  etop_bitmap_index_256.txt  etop_bitmap_index_512.txt  etopchunk_index_1024.txt  etopchunk_index_128.txt  etopchunk_index_256.txt  etopchunk_index_512.txt  pres_bitmap_index_1024.txt  pres_bitmap_index_128.txt  pres_bitmap_index_256.txt  pres_bitmap_index_512.txt  preschunk_index_128.txt  preschunk_index_256.txt  preschunk_index_512.txt
arraydb/data/figures/: figure1.eps
arraydb/data/lzma/: etop_chunk_index_1024_lzma.txt  etop_chunk_index_128_lzma.txt  etop_chunk_index_256_lzma.txt  etop_chunk_index_512_lzma.txt  etop_no_index_1024_lzma.txt  etop_no_index_128_lzma.txt  etop_no_index_256_lzma.txt  etop_no_index_512_lzma.txt  pres_chunk_index_1024_lzma.txt  pres_chunk_index_128_lzma.txt  pres_chunk_index_256_lzma.txt  pres_chunk_index_512_lzma.txt  pres_no_index_1024_lzma.txt  pres_no_index_128_lzma.txt  pres_no_index_256_lzma.txt  pres_no_index_512_lzma.txt
arraydb/data/pres/: pres-1024.txt  pres-128.txt  pres-256.txt  pres-512.txt  pres-bitmap.txt
arraydb/pysrc/: ArrayDBHandler.py  Parser.py  arrayIO.py  arraydb.thrift  chunk.py  client.py  server.py  stop_arraydb.py  tags
arraydb/pysrc/gen-py/arraydb/: ArrayDB-remote  ArrayDB.py  test.py
arraydb/scripts/: .gitignore  arraydb.py  create_chunk_index.py  data.py  experiments.py  fraction.py  launch_arraydb.py  new_performance.py  performance.py  start_server.py  stop_arraydb.py  store.sh
arraydb/src/: .gitignore  ArrayDB.cpp  ArrayDB.h  ArrayDBHandler.cpp  ArrayDBHandler.h  ArrayDBHandler.h.bak  ArrayDB_server.skeleton.cpp  Compressor.cpp  Compressor.h  Makefile  Singleton.h  arraydb.conf.bak  arraydb.thrift  arraydb_client.cpp  arraydb_constants.cpp  arraydb_constants.h  arraydb_server.cpp  arraydb_support.cpp  arraydb_support.h  arraydb_types.cpp  arraydb_types.h  file.txt  filename.txt  global.h  makefile.bak  restore.sh  result.txt  result.txt.bak  simple_client.cpp  test_command.txt  thread_pool.c  thread_pool.h
arraydb/src/gen-py/arraydb/: ArrayDB-remote  ArrayDB.py  __init__.py  ttypes.py
arraydb/tools/: .gitignore  Makefile  bincat.cpp  count_fillvalue.cpp  locality_indice.cpp
compress/lzmalib/: .gitignore  Makefile  mcmaster.py
compress/scripts/: compress_frag.py  divide.py
compress/src/: .gitignore  Makefile  extract.c  gen_2d_bin.c  gen_3d_bin.c  gen_4d_bin.c  lzma_compress.c  lzma_decompress.c  lzo_compress.c  lzo_decompress.c  matrixRotation.h  mpi_compress.c  mpi_uncompress.c  nc32bin.c  read_speed.c  rotate_2d.cpp  tags
format_transform/format-convert/: .gitignore  AUTHORS  Makefile.am  Makefile.in  config.h.in  config.h.in~  configure  configure.ac  configure.scan
format_transform/format-convert/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
format_transform/format-convert/bin2nc4/: Makefile.am  Makefile.in  bin.xml  bin2nc4.c  etopo1_ice_c_f4.hdr  gen_bin.c  support.h  xml_parser.c  xml_parser.h
format_transform/format-convert/grib2nc4/: Makefile.am  Makefile.in
format_transform/format-convert/grib2nc4/g2clib/: .gitignore  Makefile.am  Makefile.in
format_transform/format-convert/grib2nc4/src/: .gitignore  Aprof.txt  Makefile.am  Makefile.in  Netcdf.c  config.h  fnlist  gmon.out  my_convert.c  my_convert.h  my_defs.h  my_grib2nc.c  my_grib2nc.h  my_netcdf.c  my_netcdf.h  my_parallel.c  my_parallel.h  my_rd_grib2_msg.c  my_rd_grib2_msg.h  prof.txt  prof1.txt  rd_grib2_msg.c  tags  wgrib2.c
format_transform/format-convert/h52nc4/: .gitignore  Makefile.am  Makefile.in  ph52nc4.c  ph52nc4.h  visit.c  visit.h
format_transform/format-convert/text2nc4/: .gitignore  Makefile.am  Makefile.in  README  support.c  support.h  text.xml  text2nc4.c  text2nc4.c.old  xml_parser.c
format_transform/nc32h5/: .gitignore  gen_h5.py  gen_nc3.py  index.py  nc32h5.py  nc32h5_chunk.py  test_chunks.py  test_load.py  test_search.py
format_transform/record-meta/: bdb.py  mod.txt  nc32nc4_chunk.py  print_db.py  record_config.py  record_meta.py  search_tag.py
format_transform/scripts/: entry.py  etopo-httpget.py  ftpget.py  gtopo-httpget.py  master.py  support.py
ncgrep/grep-2.5.3/: .gitignore
ncgrep/grep-2.5.3/src/: .gitignore  grep.c  search.c
ncgrep/ncdump/: .gitignore  config.h  dumplib.c  dumplib.h  indent.c  int.nc  my_ncdump.c  my_ncdump.h  ncdump.c  ncdump.h  vardata.c
ncgrep/ncgrep-1.0/: Makefile.in  aclocal.m4  config.h.in  config.h.in~  config.hin  configure  configure.ac
ncgrep/ncgrep-1.0/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
ncgrep/ncgrep-1.0/intl/: Makefile
ncgrep/ncgrep-1.0/lib/.deps/: closeout.Po  error.Po  exclude.Po  hard-locale.Po  isdir.Po  obstack.Po  quotearg.Po  regex.Po  savedir.Po  xmalloc.Po  xstrtol.Po  xstrtoumax.Po
ncgrep/ncgrep-1.0/lib/posix/: Makefile  Makefile.in
ncgrep/ncgrep-1.0/src/: .gitignore  Makefile.am  Makefile.in  get_ncheader.c  get_ncheader.h  grep.c
test_fastbit/: Makefile  batch.sh  bitmap_create.py  bitmap_result.py  cc_part.h  etop-bitmap.txt  pres-bitmap.txt  test_capi  test_capi.c  test_part  test_part.cpp  tmp.txt
test_fastbit/1-4/: etop-bitmap.txt  pres-bitmap.txt
test_fastbit/12-19/: etop-bitmap.txt  pres-bitmap.txt
test_fastbit/12-19-2/: etop-bitmap.txt  pres-bitmap.txt
