
noinst_LIBRARIES = libgrib2c.a
RANLIB = ranlib

DEFS = -DUSE_JPEG2000 -DUSE_PNG @DEFS@

#noinst_HEADERS = drstemplates.h  grib2.h  gridtemplates.h  pdstemplates.h

libgrib2c_a_SOURCES = cmplxpack.c     drstemplates.h  g2_create.c   g2_unpack1.c  g2_unpack7.c     gridtemplates.h  pack_gp.c       reduce.c \
compack.c       enc_jpeg2000.c  g2_free.c     g2_unpack2.c  gbits.c          int_power.c      pdstemplates.c  seekgb.c \
comunpack.c     enc_png.c       g2_getfld.c   g2_unpack3.c  getdim.c         jpcpack.c        pdstemplates.h  simpack.c \
dec_jpeg2000.c  g2_addfield.c   g2_gribend.c  g2_unpack4.c  getpoly.c        jpcunpack.c      pngpack.c       simunpack.c \
dec_png.c       g2_addgrid.c    g2_info.c     g2_unpack5.c  grib2.h          misspack.c       pngunpack.c     specpack.c \
drstemplates.c  g2_addlocal.c   g2_miss.c     g2_unpack6.c  gridtemplates.c  mkieee.c         rdieee.c        specunpack.c
