AM_CPPFLAGS = -I../g2clib
LDADD = ../g2clib/libgrib2c.a

bin_PROGRAMS = pGrib2nc
pGrib2nc_SOURCES = CodeTable4_4.h  fnlist.h  my_defs.h     my_netcdf.h    my_rd_grib2_msg.h         test.h    wgrib2nc.h \
config.h        grb2.h    my_grib2nc.h  my_parallel.h  NCEP_local_levels_test.h  wgrib2.h \
AAIG.c         Cyclic.c        fnlist.c        Irr_grids.c   my_grib2nc.c          Range.c         Set_byte.c           unpk_0.c \
addtime.c      Data.c          For.c           jpeg_pk.c     my_netcdf.c           rd_grib2_msg.c  Set_pdt.c            unpk.c \
Alias.c        Dump.c          geo.c           lat2ij.c      my_parallel.c         rdieee_file.c   Set_val.c            unpk_complex.c \
Ave_test.c     earth.c         Grads.c         Latlon.c      my_rd_grib2_msg.c     RPN.c           simple_pk.c          unpk_run_length.c \
Bbox.c         Ensemble.c      Grib.c          Level.c       Mysql.c               Satellite.c     Small_grib.c         VerfTime.c \
bitstream.c    fatal_error.c   gribtab.c       Limit.c       Mysql_dump.c          Scan.c          SpatialProcessing.c  wgrib2.c \
Checksum.c     ffopen.c        Help.c          Lola.c        Mysql_speed.c         Sec0.c          Spectral_bands.c     Wind_speed.c \
cname.c        File.c          ieee2flt.c      Macro.c       ncep_grids.c          Sec1.c          Summary.c            Wrt_grib.c \
CodeTable.c    Fix_ncep_3.c    ieee2flt_nan.c  Match.c       NCEP_norm.c           Sec3.c          swap_buffer.c        wrtieee.c \
Code_Values.c  Fix_ncep_4.c    ieee_pk.c       Merge.c       Netcdf.c              sec3_grids.c    test_sec.c \
complex_pk.c   Fix_ncep.c      Import.c        Misc.c        Netcdf_sup.c          Sec4.c          Tigge.c \
Config.c       FlagTable.c     int8.c          missing.c     New_grid.c            Sec5.c          Tosubmsg.c \
copy.c         flt2ieee.c      intpower.c      mk_kgds.c     Precision.c           Sec6.c          Undefine.c \
crc32.c        flt2ieee_nan.c  Inv.c           Mod_grib.c    Prob.c                Sec_len.c       units.c \
Csv.c          Flush.c         Inv_no.c my_convert.h  my_convert.c  prod_def_temp_size.c  seekgrib2.c     Unix_time.c 
